--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       <!--Single Button Row-->
       <div class="row">
         <div class="col">
-          <a href="name.html" class="btn btn-lg btn-outline-primary my-3">Let's Play</a>
+          <a href="name.html" class="btn btn-lg btn-outline-primary my-3">Let's Play!</a>
         </div>
       </div>
       <!--End Button Row-->
@@ -42,7 +42,7 @@
       <div class="row justify-content-md-center" >
         <div class="col-md-auto my-5">
           <a href="https://en.wikipedia.org/wiki/Reversi" class="btn btn-lg btn-outline-primary" target="_blank">Rules</a>
-          <a href="name.html" class="btn btn-lg btn-outline-primary">About</a>
+          <a href="about.html" class="btn btn-lg btn-outline-primary">About</a>
         </div>
       </div>
       <!-- End two button row -->
