--- a/public/name.html
+++ b/public/name.html
@@ -34,7 +34,7 @@
       <div class='row'>
 
         <div class='col'>
-          <form class='form-inline' onsubmit='submitForm(); return false'>
+          <form class='form-inline' onsubmit='submitForm(); return false;'>
             <div class='form-group'>
               <label for='username' class='col-form-label sr-only'>Enter a username</label>
               <input id='username' placeholder='Enter a username' type='text' class='form-control'></input>
