--- a/public/lobby.html
+++ b/public/lobby.html
@@ -1,50 +1,58 @@
 <!doctype html>
-<html lang="en">
+<html lang='en'>
   <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
 
-    <title>Enter your username for Reversi</title>
+    <title>Reversi Game Lobby</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh' crossorigin='anonymous'>
 
   </head>
   <body>
 
-    <div class="container-fluid text-center">
+    <div class='container-fluid'>
        
       <!--Header-->
-      <div class="row" style="background-color: #f1f1f1" id="header-row">
-        <div class="col">
-          <h2>This is the lobby</h2>
+      <div class='row text-center' style='background-color: #f1f1f1' id='header-row'>
+        <div class='col my-5'>
+          <h4>Lobby</h4>
         </div>
       </div>
       <!--End Header-->
 
-      <!-- Form -->
-      <div class='row'>
+      <!-- Messages -->
+      <div class='row mt-4 justify-content-md-center'>
+        <div class='col-lg-8'>
+          <h3>Messages</h3>
+          <div id='messages' class="my-3 p-2" style="background-color: #f1f1f1"></div>
+        </div>
+      </div>
 
-        <div class='col'>
-          <form class='form-inline'>
-            <div class='form-group'>
-              <label for='username' class='col-form-label sr-only'>Enter a username</label>
-              <input id='username' placeholder='Enter a username' type='text' class='form-control'></input>
+      <!-- Form -->
+      <div class='row justify-content-md-center'>
+        <div class='col-lg-8'>
+          <form onsubmit='send_message(); return false'>
+            <div class='form-group' style="background-color: #f1f1f1">
+                <label for='send_message_holder' class='col-form-label sr-only'>Enter your chat message</label>
+                <input class='form-control' type='text' value='' id='send_message_holder' placeholder='Enter your Chat message' autocomplete='off'/>
             </div>
-            <button type='submit' class='btn btn-default btn-primary'>Done</button>
+            <button type='submit' class='btn btn-default btn-primary'>Send</button>
           </form>
         </div>
-
       </div>
-      <!-- End form -->
 
     </div>
 
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src='https://code.jquery.com/jquery-3.4.1.slim.min.js' integrity='sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n' crossorigin='anonymous'></script>
+    <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' crossorigin='anonymous'></script>
+    <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js' integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6' crossorigin='anonymous'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js" integrity="sha256-OgiHfllOBEOiWQ2OcBsDncRG2k7QBW9Rs1dB7MH2N2s=" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
+    <script src="js/server.js"></script>
   </body>
 </html>
