--- a/public/lobby.html
+++ b/public/lobby.html
@@ -20,39 +20,58 @@
           <h4>Lobby</h4>
         </div>
       </div>
-      <!--End Header-->
+      <!--End heade-->
 
       <!-- Messages -->
       <div class='row mt-4 justify-content-md-center'>
         <div class='col-lg-8'>
           <h3>Messages</h3>
-          <div id='messages' class="my-3 p-2" style="background-color: #f1f1f1"></div>
-        </div>
-      </div>
+          <div id='messages' class='my-3 p-2' style='background-color: #f1f1f1; min-height: 100px; max-height: 600px; overflow-y: scroll;'></div>
 
-      <!-- Form -->
-      <div class='row justify-content-md-center'>
-        <div class='col-lg-8'>
-          <form onsubmit='send_message(); return false'>
-            <div class='form-group' style="background-color: #f1f1f1">
-                <label for='send_message_holder' class='col-form-label sr-only'>Enter your chat message</label>
-                <input class='form-control' type='text' value='' id='send_message_holder' placeholder='Enter your Chat message' autocomplete='off'/>
+          <!-- Form -->
+          <div class='row justify-content-md-center'>
+            <div class='col-lg-12'>
+              <form onsubmit='send_message(); return false'>
+                <div class='form-group' style='background-color: #f1f1f1'>
+                    <label for='send_message_holder' class='col-form-label sr-only'>Enter your chat message</label>
+                    <input class='form-control' type='text' value='' id='send_message_holder' placeholder='Enter your Chat message' autocomplete='off'/>
+                </div>
+                <button type='submit' class='btn btn-default btn-primary'>Send</button>
+              </form>
             </div>
-            <button type='submit' class='btn btn-default btn-primary'>Send</button>
-          </form>
+          </div>
+          <!--End Form-->
+
         </div>
+
+        <!-- Player List : All new players populate here-->
+        <div class='col-4'>
+          <h3>Players</h3>
+
+          <!-- Player list -->
+          <div class="row">
+            <div class='col-3'  id='players'>
+              
+            </div>
+          </div>
+          <!-- End player list -->
+        </div>
+
       </div>
+      <!--End Messages-->
+
+      
 
     </div>
 
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src='https://code.jquery.com/jquery-3.4.1.slim.min.js' integrity='sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n' crossorigin='anonymous'></script>
+    <script src='https://code.jquery.com/jquery-3.5.1.min.js' integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=' crossorigin='anonymous'></script>
     <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' crossorigin='anonymous'></script>
     <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js' integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6' crossorigin='anonymous'></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js" integrity="sha256-OgiHfllOBEOiWQ2OcBsDncRG2k7QBW9Rs1dB7MH2N2s=" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
-    <script src="js/server.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js' integrity='sha256-OgiHfllOBEOiWQ2OcBsDncRG2k7QBW9Rs1dB7MH2N2s=' crossorigin='anonymous'></script>
+    <script src='js/main.js'></script>
+    <script src='js/server.js'></script>
   </body>
 </html>
