Added invite/uninvite/play buttons and changed the send message animation

--- a/public/lobby.html
+++ b/public/lobby.html
@@ -62,6 +62,6 @@
     <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js' integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6' crossorigin='anonymous'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js' integrity='sha256-OgiHfllOBEOiWQ2OcBsDncRG2k7QBW9Rs1dB7MH2N2s=' crossorigin='anonymous'></script>
     <script src='js/main.js'></script>
-    <script src='js/server.js'></script>
+    <script src='server.js'></script>
   </body>
 </html>
