--- a/public/name.html
+++ b/public/name.html
@@ -23,21 +23,21 @@
     <div class="container-fluid text-center">
        
       <!--Header-->
-      <div class="row" style="background-color: #f1f1f1" id="header-row">
-        <div class="col">
-          <h2>Enter your username</h2>
+      <div class="row " style="background-color: #f1f1f1" id="header-row">
+        <div class="col my-4 text-center">
+          <h3>Enter your username</h3>
         </div>
       </div>
       <!--End Header-->
 
       <!-- Form -->
-      <div class='row'>
+      <div class='row justify-content-md-center'>
 
-        <div class='col'>
-          <form class='form-inline' onsubmit='submitForm(); return false;'>
+        <div class='col-lg-6 mt-5'>
+          <form onsubmit='submitForm(); return false;'>
             <div class='form-group'>
               <label for='username' class='col-form-label sr-only'>Enter a username</label>
-              <input id='username' placeholder='Enter a username' type='text' class='form-control'></input>
+              <input id='username' placeholder='Enter a username' type='text' class='form-control form-control-lg'></input>
             </div>
             <button type='submit' class='btn btn-default btn-primary'>Done</button>
           </form>
