FINIShED THE GAME RAAAAH!!!

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Let's Play Reversi!</title>
   </head>
   <body>
 
@@ -25,7 +25,7 @@
       <!--Single Button Row-->
       <div class="row">
         <div class="col">
-          <a href="name.html" class="btn btn-lg btn-outline-primary my-3">Let's Play!</a>
+          <a href="name.html" class="btn btn-lg btn-info my-3">Let's Play!</a>
         </div>
       </div>
       <!--End Button Row-->
